@@ -1,7 +1,5 @@
 package com.sparta.kanbanboard.common.security.filters;
 
-import static com.sparta.kanbanboard.common.ResponseCodeEnum.SUCCESS_LOGOUT;
-import static com.sparta.kanbanboard.common.ResponseCodeEnum.SUCCESS_TO_SINGOUT;
 import static com.sparta.kanbanboard.common.ResponseExceptionEnum.INVALID_REFRESHTOKEN;
 import static com.sparta.kanbanboard.common.ResponseExceptionEnum.NOT_FOUND_AUTHENTICATION_INFO;
 
@@ -13,12 +11,13 @@ import com.sparta.kanbanboard.common.security.details.UserDetailsServiceImpl;
 import com.sparta.kanbanboard.domain.user.utils.Role;
 import com.sparta.kanbanboard.exception.user.UserException;
 import io.jsonwebtoken.Claims;
+import io.jsonwebtoken.ExpiredJwtException;
+import io.jsonwebtoken.JwtException;
 import jakarta.servlet.FilterChain;
 import jakarta.servlet.ServletException;
 import jakarta.servlet.http.HttpServletRequest;
 import jakarta.servlet.http.HttpServletResponse;
 import java.io.IOException;
-import java.util.Arrays;
 import java.util.List;
 import java.util.Objects;
 import lombok.RequiredArgsConstructor;
@@ -28,7 +27,6 @@ import org.springframework.security.core.Authentication;
 import org.springframework.security.core.context.SecurityContext;
 import org.springframework.security.core.context.SecurityContextHolder;
 import org.springframework.security.core.userdetails.UserDetails;
-import org.springframework.security.web.authentication.logout.SecurityContextLogoutHandler;
 import org.springframework.util.StringUtils;
 import org.springframework.web.filter.OncePerRequestFilter;
 
@@ -39,61 +37,77 @@ public class JwtAuthorizationFilter extends OncePerRequestFilter {
     private final TokenProvider tokenProvider;
     private final TokenService tokenService;
     private final UserDetailsServiceImpl userDetailsService;
-    private final ObjectMapper objectMapper = new ObjectMapper();
+    private final ObjectMapper objectMapper;
 
-    // JWT 검증을 제외할 경로 목록
-    private static final List<String> EXCLUDED_PATHS = Arrays.asList(
-            "/",
-            "/index.html",
-            "/signupPage.html",
-            "/login.html",
-            "/resources/static"
+    private final List<String> WHITE_LIST = List.of(
+            "/trello",
+            "/trello/signupPage",
+            "/static",
+            "/image",
+            "/css",
+            "/js"
     );
 
     @Override
     protected void doFilterInternal(HttpServletRequest request, HttpServletResponse response,
             FilterChain filterChain) throws ServletException, IOException {
-
         String requestUri = request.getRequestURI();
+        String method = request.getMethod();
+        log.info("Requested URI: {}", requestUri);
 
-        // 제외 경로에 해당하는 요청은 필터를 통과
-        if (isExcludedPath(requestUri)) {
+        // 보호된 경로에 대한 요청 확인
+        if (!isProtectedPath(requestUri, method) || requestUri.equals("/users/login")) {
             filterChain.doFilter(request, response);
             return;
         }
 
+        // AccessToken 가져오기
         String accessToken = tokenProvider.getAccessTokenFromHeader(request);
 
-        // 보호된 경로에 대한 요청 처리
-        if (isProtectedPath(requestUri, request.getMethod())) {
+        try {
+            // AccessToken 검증
             if (StringUtils.hasText(accessToken) && tokenProvider.validateToken(accessToken)) {
                 processValidToken(accessToken, request, response, filterChain);
             } else {
+                // 유효하지 않은 토큰 처리
                 processInvalidToken(request, response);
             }
-        } else {
-            filterChain.doFilter(request, response);
+        } catch (ExpiredJwtException e) {
+            // AccessToken이 만료된 경우
+            log.info("Access token expired. Handling expired access token.");
+            processInvalidToken(request, response);
+        } catch (JwtException | IllegalArgumentException e) {
+            // 다른 JWT 예외 처리
+            log.error("JWT validation failed: {}", e.getMessage());
+            setErrorResponse(response);
         }
     }
 
-    // 경로가 제외 경로 목록에 있는지 확인
-    private boolean isExcludedPath(String requestUri) {
-        return EXCLUDED_PATHS.stream().anyMatch(requestUri::startsWith);
+    // 유효한 Access Token 처리
+    private void handleValidAccessToken(String accessToken) {
+        // 액세스 토큰에서 클레임(사용자 정보)을 추출
+        Claims accessTokenClaims = tokenProvider.getUserInfoFromToken(accessToken);
+        String username = accessTokenClaims.getSubject();
+
+        // 사용자 인증 설정
+        setAuthentication(username);
     }
 
-    // 보호된 경로인지 확인
+
+    // isProtectedPath 메서드 구현 업데이트
     private boolean isProtectedPath(String requestUri, String method) {
-        return !("/users".equals(requestUri) && "POST".equalsIgnoreCase(method));
+        return WHITE_LIST.stream().noneMatch(requestUri::startsWith) &&
+                !("/users".equals(requestUri) && "POST".equalsIgnoreCase(method));
     }
 
     // 유효한 토큰 처리
-    private void processValidToken(String token, HttpServletRequest request, HttpServletResponse response,
+    private void processValidToken(String token, HttpServletRequest request,
+            HttpServletResponse response,
             FilterChain filterChain) throws IOException {
         Claims info = tokenProvider.getUserInfoFromToken(token);
 
         try {
             setAuthentication(info.getSubject());
-            handleLogoutIfNeeded(request, response, info.getSubject());
             filterChain.doFilter(request, response);
         } catch (RuntimeException | ServletException e) {
             log.error("username = {}, message = {}", info.getSubject(), "인증 정보를 찾을 수 없습니다.");
@@ -114,8 +128,10 @@ public class JwtAuthorizationFilter extends OncePerRequestFilter {
     }
 
     // 새로운 액세스 토큰 발급
-    private void reissueAccessToken(HttpServletRequest request, HttpServletResponse response, String refreshToken)
+    private void reissueAccessToken(HttpServletRequest request, HttpServletResponse response,
+            String refreshToken)
             throws IOException {
+
         Claims info = tokenProvider.getUserInfoFromToken(refreshToken);
         Role role = Role.valueOf(info.get("auth").toString());
 
@@ -152,53 +168,15 @@ public class JwtAuthorizationFilter extends OncePerRequestFilter {
         SecurityContextHolder.setContext(context);
     }
 
-    // 로그아웃 필요 시 처리
-    private void handleLogoutIfNeeded(HttpServletRequest request, HttpServletResponse response, String username)
-            throws IOException {
-        String requestUri = request.getRequestURI();
-        if ("/users/logout".equals(requestUri) || ("/users".equals(requestUri)
-                && "PATCH".equalsIgnoreCase(request.getMethod()))) {
-            handleLogout(request, response, username);
-        }
-    }
 
-    // 로그아웃 처리
-    private void handleLogout(HttpServletRequest request, HttpServletResponse response, String username)
-            throws IOException {
-        Authentication authentication = SecurityContextHolder.getContext().getAuthentication();
-        if (authentication != null) {
-            invalidateTokens(request, username);
-        }
 
-        new SecurityContextLogoutHandler().logout(request, response, authentication);
-        writeLogoutResponse(request, response);
-        log.info("User logged out successfully");
-    }
-
-    // 토큰 무효화
-    private void invalidateTokens(HttpServletRequest request, String username) {
-        String accessToken = request.getHeader("AccessToken");
-        if (accessToken != null && accessToken.startsWith("Bearer ")) {
-            String token = accessToken.substring(7);
-            tokenProvider.invalidateTokens(username, token);
-        }
-    }
-
-    // 로그아웃 및 회원 탈퇴 응답 작성
-    private void writeLogoutResponse(HttpServletRequest request, HttpServletResponse response)
-            throws IOException {
-        response.setContentType("application/json");
-        response.setCharacterEncoding("UTF-8");
-
-        if ("/users".equals(request.getRequestURI())) {
-            response.getWriter().write(objectMapper.writeValueAsString(new HttpResponseDto(
-                    SUCCESS_TO_SINGOUT.getHttpStatus().value(), SUCCESS_TO_SINGOUT.getMessage())));
-        } else {
-            response.getWriter().write(objectMapper.writeValueAsString(new HttpResponseDto(
-                    SUCCESS_LOGOUT.getHttpStatus().value(), SUCCESS_LOGOUT.getMessage())));
-        }
-
-        response.getWriter().flush();
-        response.getWriter().close();
+    private void setErrorResponse(HttpServletResponse res) throws IOException {
+        res.setStatus(INVALID_REFRESHTOKEN.getHttpStatus().value());
+        res.setContentType("application/json;charset=UTF-8");
+        HttpResponseDto responseDto = new HttpResponseDto(
+                INVALID_REFRESHTOKEN.getHttpStatus().value(),
+                INVALID_REFRESHTOKEN.getMessage()
+        );
+        res.getWriter().write(objectMapper.writeValueAsString(responseDto));
     }
 }
